# Rustoration

./: CLAUDE.md  Cargo.toml  GEMINI.md  README.md
.cargo/: config.toml
.gemini/: settings.json
gui/RustyCunnyGui/: App.axaml  MainWindow.xaml  MainWindow.xaml.cs  MainWindowViewModel.cs  Program.cs  RustyCunnyGui.csproj
src/: detection.rs  inpaint.rs  lib.rs  main.rs  mask.rs  pipeline.rs
tools/: convert_yolo_to_safetensors.py
