[package]
name = "rusty-cunny"
version = "0.1.0"
edition = "2021"

[dependencies]
candle-core = { version = "0.10.2", features = ["cuda"] }
candle-nn = "0.10.2"
candle-transformers = "0.10.2"
tokio = { version = "1.35", features = ["full"] }
image = "0.24"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ndarray = "0.15"
ndarray-stats = "0.5"
cudarc = { version = "0.19.4", features = ["cuda-version-from-build-system", "fallback-latest"] }


[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[[bin]]
name = "restore"
path = "src/main.rs"
